[package]
name = "derivers"
version = "0.1.0"
authors = ["Matthias Wolf <m@sushinara.net>", "Erik Price <github@erikprice.net>"]

[dependencies]
chrono = "0.4.37"
clap = { version = "4.5.1", features = ["derive"] }
csv = "1.1"
directories = "4.0.1"
fitparser = "0.6.1"
flate2 = "*"
font-loader = "0.11.0"
geo = "0.18.0"
geo-types = "0.7.13"
gpx = "0.10.0"
http_req = "0.8"
image = "0.23.14"
imageproc = "0.22.0"
indicatif = {version = "*", features = ["rayon"]}
lazy_static = "1.0"
libc = "0.2.35"
palette = "0.6"
rayon = "1.5.1"
regex = "1.5"
rusttype = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "*"
time = "0.3.34"

# TODO: Eventually, this is much faster than the xml-rs code gpx uses
# quick-xml = "0.10.1"
